# api-test-studio

./: .gitignore  LICENSE  README.md
backend/: database.py  diagnose_results.py  main.py  models.py  pyproject.toml  reset_test_run_results.py
backend/router/: project.py
backend/services/: ai_constraint_extractor.py  openapi_parser.py
backend/services/partition/: __init__.py  combi_space_gen.py  mixed_space_gen.py  single_space_gen.py
backend/services/testcase/: __init__.py  testcase_generator.py
backend/tests/: http_request_debug.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: ApiManagement.jsx  AutoTestModule.jsx  AutoTestModule_old.jsx  CreateApiModal.jsx  CreateProjectModal.jsx  TestReportModule.jsx
